--- a/Week3/Facebook.html
+++ b/Week3/Facebook.html
@@ -97,7 +97,7 @@
        
    
 <!--ส่วนล่าง-->
-    <div class="container-fluid" style="background-color: hotpink">
+    <div class="container-fluid" style="background-color: rgb(45, 74, 236)">
 fefwf
     </div>
 
