--- a/Week6/Exercise.html
+++ b/Week6/Exercise.html
@@ -124,24 +124,47 @@
                         </div>
                     </div>
                 </div>
-            </div><br><br>
+            </div><br>
+            <div class="row ">
+                <div class="col text-center mt-1">
+                    <button type="button" class="btn btn-success rounded-pill mt-1"><b><h5>ดูบล็อกทั้งหมด &gt;</h5></b></button>
+                </div>
+            </div>
+            <br>
 
         </div>
     </div>
     <div>
 
-        <div class="bg-success text-white">
-            <div class="container ">
-                <div class="row">
-                    <div class="col-10">
-                        Copyright © 2019 Tescolotus.com. All rights reserved.
+        <div class="container-fluid bg-success text-white">
+            <div class="container">
+                <div class="row " style="height: 50px">
+                    <div class="col-5 mt-2">
+                        <b>Copyright © 2019 Tescolotus.com. All rights reserved.</b>
                     </div>
-                    <div class="col">
-                        <i class="icon ion-logo-facebook"></i>
+                    <div class="col-5 mt-2">
+                        <p>Term Condition | Privacy Policy</p>
+                    </div>
+                    <div class="col mt-2">
+                        <div class="row text-right">
+                            <div class="col-1 ">
+                                <i class="icon ion-logo-facebook"></i>
+                            </div>
+                            <div class="col-1">
+                                <i class="icon ion-logo-twitter"></i>
+                            </div>
+                            <div class="col-1">
+                                <i class="icon ion-logo-instagram"></i>
+                            </div>
+                            <div class="col-1 ">
+                                <button type="button" class="btn btn-success btn-outline-light  rounded-pill btn-sm"> &nbsp;&nbsp;EN&nbsp;&nbsp; </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
